# Linux_Proton_Drive

./: .gitignore  CLAUDE.md  LICENSE  README.md  flake.nix  package.json  tsconfig.json
.github/workflows/: ci.yml  e2e.yml  release.yml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-project-initialization-sdk-compatibility-spike.md  1-1-ui-project-scaffolding.md  1-10-post-auth-account-overview-and-session-handoff.md  1-11-silent-token-validation-on-launch.md  1-12-settings-page-and-log-out.md  1-13-sdk-boundary-and-no-app-network-verification.md  1-2-commander-cli-scaffold-error-class-hierarchy.md  1-2-engine-project-scaffolding.md  1-3-ipc-protocol-and-socket-server.md  1-3-output-infrastructure-human-json.md  1-4-engine-spawn-and-socket-connection.md  1-4-yaml-config-loader.md  1-5-protocol-handshake-and-engine-lifecycle.md  1-5-sync-state-database.md  1-6-credential-storage-libsecret-plus-fallback.md  1-7-localhost-auth-callback-server.md  1-8-pre-auth-screen-and-credential-comfort.md  1-9-embedded-webkitgtk-auth-browser.md  2-0-tech-debt-cleanup.md  2-1-sqlite-state-database-and-schema.md  2-1-srp-authentication-implementation.md  2-10-flatpak-build-validation.md  2-11-key-password-derivation.md  2-12-unified-queue-drainer-refactor.md  2-2-5-sdk-live-wiring.md  2-2-credential-store-keychain-headless-fallback.md  2-2-sdk-driveclient-wrapper.md  2-3-auth-login-and-auth-logout-commands.md  2-3-remote-folder-picker-component.md  2-4-setup-wizard-and-first-pair-creation.md  2-4-totp-2fa-support.md  2-5-sync-engine-core-two-way-sync.md  2-6-inotify-file-watcher-and-change-detection.md  2-7-syncpairrow-and-statusfooterbar-components.md  2-8-syncprogresscard-and-detail-panel.md  2-9-window-state-persistence.md  3-0a-bun-runtime-migration.md  3-0b-targeted-debt-fixes.md  3-1-driveclient-sdk-wrapper-retry-policy.md  3-1-offline-detection-and-ui-indicators.md  (+44 more)
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-01.md  implementation-readiness-report-2026-04-05.md  implementation-readiness-report-2026-04-08.md  lessons-learned-cli-iteration.md  prd-validation-report.md  prd.md  product-brief-ProtonDrive-LinuxClient-distillate.md  product-brief-ProtonDrive-LinuxClient.md  sprint-change-proposal-2026-04-05-api-400.md  sprint-change-proposal-2026-04-05-auth-bugs.md  sprint-change-proposal-2026-04-05-captcha-flow.md  sprint-change-proposal-2026-04-05.md  sprint-change-proposal-2026-04-11.md  ux-design-directions.html  ux-design-specification.md
_bmad-output/planning-artifacts/architecture/: architecture-validation-results.md  core-architectural-decisions.md  implementation-patterns-consistency-rules.md  index.md  project-context-analysis.md  project-structure-boundaries.md  starter-template-evaluation.md
_bmad-output/planning-artifacts/epics/: epic-1-app-foundation-authentication.md  (+10 more)
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: architecture.md  component-inventory.md  development-guide.md  diagrams.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
engine/: package-lock.json  package.json  tsconfig.json
engine/scripts/: probe-key-decrypt.ts
engine/src/: config.test.ts  config.ts  conflict.test.ts  conflict.ts  debug-log.test.ts  debug-log.ts  errors.ts  ipc.test.ts  ipc.ts  main.test.ts  main.ts  network-monitor.test.ts  network-monitor.ts  sdk.test.ts  sdk.ts  state-db.test.ts  state-db.ts  sync-engine.test.ts  sync-engine.ts  undici-ambient.d.ts  watcher.test.ts  watcher.ts
flatpak/: io.github.ronki2304.ProtonDriveLinuxClient.desktop  io.github.ronki2304.ProtonDriveLinuxClient.metainfo.xml  io.github.ronki2304.ProtonDriveLinuxClient.yml
packaging/appimage/: build-appimage.sh  protondrive.desktop
packaging/aur/: .SRCINFO  .gitignore  PKGBUILD
packaging/nix/: flake.nix
scripts/: check-boundaries.sh
src/: cli.test.ts  cli.ts  errors.test.ts  errors.ts  types.ts
src/__e2e__/: cli.e2e.test.ts  workflow.test.ts
src/__integration__/: auth.integration.test.ts  sync.integration.test.ts
src/auth/: credentials.test.ts  credentials.ts  file-store.test.ts  file-store.ts  keyring-store.test.ts  keyring-store.ts  srp.test.ts  srp.ts
src/commands/: auth-login.test.ts  auth-login.ts  auth-logout.test.ts  auth-logout.ts  download.test.ts  download.ts  status.test.ts  status.ts  sync.test.ts  sync.ts  upload.test.ts  upload.ts
src/core/: config.test.ts  config.ts  conflict.test.ts  conflict.ts  output.test.ts  output.ts  state-db.test.ts  state-db.ts  sync-engine.test.ts  sync-engine.ts
src/sdk/: account-service.ts  client.test.ts  client.ts  openpgp-proxy.ts  srp-module.ts
ui/: meson.build
ui/data/: io.github.ronki2304.ProtonDriveLinuxClient.gschema.xml  protondrive.gresource.xml  protondrive.in  style.css
ui/data/ui/: account-header-bar.blp  auth-window.blp  conflict-log.blp  key-unlock-dialog.blp  pair-detail-panel.blp  pre-auth.blp  reauth-dialog.blp  remote-folder-picker.blp  settings.blp  setup-wizard.blp  status-footer-bar.blp  sync-pair-row.blp  sync-progress-card.blp  window.blp
ui/src/protondrive/: __init__.py  __main__.py  auth.py  auth_window.py  credential_store.py  engine.py  errors.py  main.py  pre_auth.py  window.py
ui/src/protondrive/widgets/: __init__.py  account_header_bar.py  conflict_log.py  key_unlock_dialog.py  pair_detail_panel.py  reauth_dialog.py  remote_folder_picker.py  settings.py  setup_wizard.py  status_footer_bar.py  sync_pair_row.py  sync_progress_card.py
ui/tests/: conftest.py  test_auth.py  test_auth_completion.py  test_auth_window.py  test_conflict_log.py  test_credential_store.py  test_engine.py  test_key_unlock_dialog.py  test_launch_routing.py  test_main.py  test_main_routing.py  test_pair_detail_panel.py  test_pre_auth.py  test_remote_folder_picker.py  test_settings.py  test_setup_wizard.py  test_status_footer_bar.py  test_sync_pair_row.py  test_sync_progress_card.py  test_widgets.py  test_window_routing.py  test_window_state_persistence.py
(+13 files in other folders)
